Updated Sign Up

--- a/signin.html
+++ b/signin.html
@@ -36,13 +36,15 @@
       </form>
       <p class="sign-in-using">Or Sign in using</p>
       <div class="submit-div">
-      <input type="button" value="FaceBook" />
+        <button><img src="images/facebook.svg" alt="">Facebook</button>
+      <!-- <input type="button" value="FaceBook"> -->
       </div>
       <div class="submit-div google">
-      <p><input type="button" value="Google" /></p>
+      <!-- <p><input type="button" value="Google"></p> -->
+      <button class="google-button"><img src="images/Google.svg" alt="">Google</button>
       </div>
 
-      <p class="dont-have-acct">Don't have an account?<a href="#"> Sign Up</a></p>
+      <p class="dont-have-acct">Don't have an account?<a href="signup.html"> Sign Up</a></p>
     </div>
   </div>
 
