added index file

--- a/signin.html
+++ b/signin.html
@@ -10,15 +10,22 @@
   <div>
     <div class="sign">
       <div class="img-div">
-      <img class="logo-img" src="images/SMARTbuylogo.svg" alt="smartBuy logo" />
+        <img
+          class="logo-img"
+          src="images/SMARTbuylogo.svg"
+          alt="smartBuy logo"
+        />
       </div>
       <p class="sign-in">Sign In</p>
       <form>
-
         <label class="lab1">Email</label>
         <div class="email-div">
           <!-- <label>Email</label> -->
-          <input class="email-input" type="text" placeholder="example@email.com" />
+          <input
+            class="email-input"
+            type="text"
+            placeholder="example@email.com"
+          />
         </div>
 
         <label class="lab2">Password</label>
@@ -28,23 +35,27 @@
           <label for="password-input" class="password-toggle"></label>
         </div>
         <div class="forgot-div">
-        <p><a href="#">Forgot Password?</a></p>
+          <p><a href="#">Forgot Password?</a></p>
         </div>
         <div class="submit-div">
-        <input type="submit" value="Sign In" />
+          <input type="submit" value="Sign In" />
         </div>
       </form>
       <p class="sign-in-using">Or Sign in using</p>
       <div class="submit-div">
-        <button><img src="images/facebook.svg" alt="">Facebook</button>
-      <!-- <input type="button" value="FaceBook"> -->
+        <button><img src="images/facebook.svg" alt="" />Facebook</button>
+        <!-- <input type="button" value="FaceBook"> -->
       </div>
       <div class="submit-div google">
-      <!-- <p><input type="button" value="Google"></p> -->
-      <button class="google-button"><img src="images/Google.svg" alt="">Google</button>
+        <!-- <p><input type="button" value="Google"></p> -->
+        <button class="google-button">
+          <img src="images/Google.svg" alt="" />Google
+        </button>
       </div>
 
-      <p class="dont-have-acct">Don't have an account?<a href="signup.html"> Sign Up</a></p>
+      <p class="dont-have-acct">
+        Don't have an account?<a href="signup.html"> Sign Up</a>
+      </p>
     </div>
   </div>
 
