--- a/signup.html
+++ b/signup.html
@@ -1,68 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="signup.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="signup.css" />
     <title>Sign Up</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <div>
-        <div class="sign">
-            <div class="img-div">
-            <img src="images/SMARTbuylogo.svg" alt="">
-            </div>
-          <p class="sign-in">Sign Up</p>  
-          <form>
-            <div>
-                <label class="lab1">First Name</label>
-                <div class="email-div">
-                <input type="text" placeholder="Chinaza">
-                </div>
-            </div>
-            <div>
-                <label class="lab1">Last Name</label>
-                <div class="email-div">
-                <input type="text" placeholder="Sunday" id="password-input" >
-                </div>
-                <!-- <label for="password-input" class="password-toggle"></label> -->
-            </div>
-
-            <div>
-                <label class="lab1">Email</label>
-                <div class="email-div">
-                <input type="text" placeholder="example@gmail.com">
-                </div>
-            </div>
-
-            <div>
-                <label class="lab1">Password</label>
-                <div class="email-div">
-                <input type="text" placeholder="Enter password">
-                </div>
-            </div>
-
-            <div class="submit-div">
-            <input type="submit" value="Sign In">
-            </div>
-          </form>
-          <p class="sign-in-using">Or Sign in using</p>
-          <div class="submit-div">
-            <button><img src="images/facebook.svg" alt="">Facebook</button>
-          <!-- <input type="button" value="FaceBook"> -->
-          </div>
-          <div class="submit-div google">
-          <!-- <p><input type="button" value="Google"></p> -->
-          <button class="google-button"><img src="images/Google.svg" alt="">Google</button>
-          </div>
-          <p class="dont-have-acct">Don't have an account? <a href="signin.html">Sign In</a></p>
-    
+      <div class="sign">
+        <div class="img-div">
+          <img src="images/SMARTbuylogo.svg" alt="" />
         </div>
+        <p class="sign-in">Sign Up</p>
+        <form>
+          <div>
+            <label class="lab1">First Name</label>
+            <div class="email-div">
+              <input type="text" placeholder="Chinaza" />
+            </div>
+          </div>
+          <div>
+            <label class="lab1">Last Name</label>
+            <div class="email-div">
+              <input type="text" placeholder="Sunday" id="password-input" />
+            </div>
+            <!-- <label for="password-input" class="password-toggle"></label> -->
+          </div>
+
+          <div>
+            <label class="lab1">Email</label>
+            <div class="email-div">
+              <input type="text" placeholder="example@gmail.com" />
+            </div>
+          </div>
+
+          <div>
+            <label class="lab1">Password</label>
+            <div class="email-div">
+              <input type="text" placeholder="Enter password" />
+            </div>
+          </div>
+
+          <div class="submit-div">
+            <input type="submit" value="Sign In" />
+          </div>
+        </form>
+        <p class="sign-in-using">Or Sign in using</p>
+        <div class="submit-div">
+          <button><img src="images/facebook.svg" alt="" />Facebook</button>
+          <!-- <input type="button" value="FaceBook"> -->
+        </div>
+        <div class="submit-div google">
+          <!-- <p><input type="button" value="Google"></p> -->
+          <button class="google-button">
+            <img src="images/Google.svg" alt="" />Google
+          </button>
+        </div>
+        <p class="dont-have-acct">
+          Don't have an account? <a href="signin.html">Sign In</a>
+        </p>
+      </div>
     </div>
-
-
-    
-</body>
+  </body>
 </html>
