--- a/index.html
+++ b/index.html
@@ -264,6 +264,67 @@
           </div>
         </div>
       </div>
+
+
+      <div class="forth-cont">
+          <h1>SHOP BY BRANDS</h1>
+          <p>Choose your favorite brand and shop</p>
+          <div class="images">
+            <div>
+              <a href=""><img src="images/oraimo-0.png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+          </div>
+
+          
+          <div class="images">
+            <div>
+              <a href=""><img src="images/oraimo-0.png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+          </div>
+
+
+          <div class="images">
+            <div>
+              <a href=""><img src="images/oraimo-0.png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="images/samsung (1).png" alt=""></a>
+            </div>
+          </div>
+      </div>
     </main>
 
     <footer></footer>
