Updated index file

--- a/signin.html
+++ b/signin.html
@@ -10,11 +10,13 @@
   <div>
     <div class="sign">
       <div class="img-div">
-        <img
-          class="logo-img"
-          src="images/SMARTbuylogo.svg"
-          alt="smartBuy logo"
-        />
+        <a href="index.html">
+          <img
+            class="logo-img"
+            src="images/SMARTbuylogo.svg"
+            alt="smartBuy logo"
+          />
+        </a>
       </div>
       <p class="sign-in">Sign In</p>
       <form>
