--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
     <div>
       <div class="sign">
         <div class="img-div">
-          <img src="images/SMARTbuylogo.svg" alt="" />
+          <a href="index.html"><img src="images/SMARTbuylogo.svg" alt="" /></a>
         </div>
         <p class="sign-in">Sign Up</p>
         <form>
