--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <a href="" ><img class="acct" src="images/profile.svg" alt="" />Account <img class="acct" src="images/drop-down.svg" alt=""></a>
           <div class="dropdown-content">
             <a href=""><img class="acct-img" src="images/User.svg" alt="">My Account</a>
-            <a href=""><img class="acct-img" src="images/Sign In.svg" alt=""> Sign In</a>
-            <a href=""><img class="acct-img" src="images/Add User Male.svg" alt=""> Sign Up</a>
+            <a href="signin.html"><img class="acct-img" src="images/Sign In.svg" alt=""> Sign In</a>
+            <a href="signuo.html"><img class="acct-img" src="images/Add User Male.svg" alt=""> Sign Up</a>
             <a href=""><img class="acct-img" src="images/Add Shopping Cart.svg" alt=""> Orders</a>
           </div>
         </div>
