--- a/signin.html
+++ b/signin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="signin.css" />
-    <title>SmartBuy</title>
+    <title>SmartBb Zuy</title>
   </head>
   <div>
     <div class="sign">
