added product detail page

--- a/product-detail.html
+++ b/product-detail.html
@@ -10,7 +10,7 @@
       type="text/css"
     />
 
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="product-detail.css">
     <script src="https://kit.fontawesome.com/d08bc766f2.js" crossorigin="anonymous"></script>
     <title>SmartBuy</title>
   </head>
@@ -71,11 +71,16 @@
             
         </p>
         <div class="star-div">
-        <span class="fa fa-star checked"></span>
+          <div class="start-div-1">
+            <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star"></span>
+          </div>
+          <div class="start-div-2">
+            <p>(10 verified rating)</p>
+          </div>
             </div>
 
             <div class="price-div">
@@ -83,7 +88,7 @@
             </div>
             <div>
             <button class="a-t-c">ADD TO CART</button>
-            <button class="s-i"> <img src="" alt=""> SAVE ITEM</button>
+            <button class="s-i"> <img src="images/saved.svg" alt=""> SAVE ITEM</button>
             </div>
             </div>
       </div>
