--- a/product-detail.html
+++ b/product-detail.html
@@ -33,7 +33,7 @@
           <div class="dropdown-content">
             <a href=""><img class="acct-img" src="images/User.svg" alt="">My Account</a>
             <a href="signin.html"><img class="acct-img" src="images/Sign In.svg" alt=""> Sign In</a>
-            <a href="signuo.html"><img class="acct-img" src="images/Add User Male.svg" alt=""> Sign Up</a>
+            <a href="signup.html"><img class="acct-img" src="images/Add User Male.svg" alt=""> Sign Up</a>
             <a href=""><img class="acct-img" src="images/Add Shopping Cart.svg" alt=""> Orders</a>
           </div>
         </div>
