--- a/landing_page.html
+++ b/landing_page.html
@@ -205,22 +205,22 @@
                     </p>
 
                     <h2>Projeect timeline</h2>
-                    <p class="timeline">
-                      <h2>Timeline and Key Milestones: </h2>
+                    
+                        
                      <h2>Project Kickoff and Planning (Week 1)</h2>  
-                 Defined project goals, scope, and requirements.
-                Developed a project plan, including the timeline and resource allocation.
+                 <p>Defined project goals, scope, and requirements.<br>
+                Developed a project plan, including the timeline and resource allocation.</p>
                 <h2>Design and Development (Weeks 2-6)</h2>
-                Collaborated with designers to create wireframes and prototypes.
-                Translated design concepts into functional code.
+               <p> 
+                Translated design concepts into functional code.</p>
                 <h2>Testing and Refinement (Weeks 7-8)</h2>
-                  Conducted thorough testing to ensure the quality and performance of the solution.
-                  Addressed any reported bugs or issues and made necessary adjustments.
+                 <p> Conducted thorough testing to ensure the quality and performance of the solution. <br>
+                  Addressed any reported bugs or issues and made necessary adjustments.</p>
                   <h2>Deployment and Launch (Week 9)</h2>
-              Prepared the infrastructure for deployment, including servers and databases.
-              Completed final testing and quality assurance.
+             <p> Prepared the infrastructure for deployment, including servers and databases. <br>
+              Completed final testing and quality assurance.</p>
               <h2>Post-Launch Support and Enhancements (Ongoing)</h2>
-              Monitored the performance and usage of the solution.
+              <p>Monitored the performance and usage of the solution. <br>
             Continued to enhance the solution based on user feedback and emerging market trends.
             </p>
               </div>
